Fixed vertical overflow in mobile devices

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 
 body {
   background-color: #341c54;
-  height: 100%;
+  height: 100vh;
+  overflow-y: hidden;
 }
 
 .container {
@@ -95,6 +96,7 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
+  
   .container {
     flex-direction: column;
   }
@@ -118,7 +120,7 @@ body {
     font-size: 20px;
   }
 
-  .logo{
+  .logo {
     height: 45%;
     width: 55%;
   }
@@ -129,7 +131,7 @@ body {
     font-size: 20px;
   }
 
-  .forgot-password{
+  .forgot-password {
     font-size: 18px;
   }
 }
